--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 							<div class="items">
 
 								<div class="item intro span-2">
-									<h1>Parallelism</h1>
-									<p>A responsive portfolio site<br />
-									template by HTML5 UP</p>
+									<h1>HAYASHI</h1>
+									<p>ASDASDASDASDASDASD<br />
+									ASDASDASDASD</p>
 								</div>
 
 								<article class="item thumb span-1">
@@ -91,7 +91,7 @@
 				<!-- Footer -->
 					<section id="footer">
 						<section>
-							<p>This is <strong>Parallelism</strong>, a responsive portfolio site template by <a href="http://html5up.net">HTML5 UP</a>. Free for personal
+							<p>Hola como estas <strong>Parallelism</strong>asdasdasd <a href="http://html5up.net">HTML5 UP</a>. Free for personal
 							and commercial use under the <a href="http://html5up.net/license">Creative Commons Attribution</a> license.</p>
 						</section>
 						<section>
